// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Remove deployer > should remove the deployer from ./__fixtures__/basic.js 1`] = `
"import { createLogger } from '@mastra/core/logger';
import { Mastra } from '@mastra/core/mastra';
import { createApiRoute } from '@mastra/core/server';
import { weatherAgent } from '@/agents';

const mastra = new Mastra({
  agents: {
    weatherAgent
  },
  logger: createLogger({
    name: "Mastra",
    level: "info"
  }),
  telemetry: {
    enabled: true,
    serviceName: "my-app",
    export: {
      type: "otlp",
      endpoint: "http://localhost:4318"
      // SigNoz local endpoint
    }
  },
  server: {
    port: 3e3,
    timeout: 5e3,
    apiRoutes: [createApiRoute({
      path: "/hello",
      method: "get",
      handler: async (req, res) => {
        res.send("Hello World");
      }
    })]
  }
});

export { mastra };
"
`;

exports[`Remove deployer > should remove the deployer from ./__fixtures__/basic-with-const.js 1`] = `
"import { createLogger } from '@mastra/core/logger';
import { Mastra } from '@mastra/core/mastra';
import { createApiRoute } from '@mastra/core/server';
import { weatherAgent } from '@/agents';

const telemetry = {
  enabled: true,
  serviceName: "my-app",
  export: {
    type: "otlp",
    endpoint: "http://localhost:4318"
    // SigNoz local endpoint
  }
};
const server = {
  port: 3e3,
  timeout: 5e3,
  apiRoutes: [createApiRoute({
    path: "/hello",
    method: "get",
    handler: async (req, res) => {
      res.send("Hello World");
    }
  })]
};
const mastra = new Mastra({
  agents: {
    weatherAgent
  },
  logger: createLogger({
    name: "Mastra",
    level: "info"
  }),
  telemetry,
  server
});

export { mastra };
"
`;

exports[`Remove deployer > should remove the deployer from ./__fixtures__/basic-with-function.js 1`] = `
"import { createLogger } from '@mastra/core/logger';
import { Mastra } from '@mastra/core/mastra';
import { createApiRoute } from '@mastra/core/server';
import { weatherAgent } from '@/agents';

function getTelemetryConfig() {
  return {
    enabled: true,
    serviceName: "my-app",
    export: {
      type: "otlp",
      endpoint: "http://localhost:4318"
      // SigNoz local endpoint
    }
  };
}
function getServerOptions() {
  return {
    port: 3e3,
    timeout: 5e3,
    apiRoutes: [createApiRoute({
      path: "/hello",
      method: "get",
      handler: async (req, res) => {
        res.send("Hello World");
      }
    })]
  };
}
const mastra = new Mastra({
  agents: {
    weatherAgent
  },
  logger: createLogger({
    name: "Mastra",
    level: "info"
  }),
  telemetry: getTelemetryConfig(),
  server: getServerOptions()
});

export { mastra };
"
`;

exports[`Remove deployer > should remove the deployer from ./__fixtures__/basic-with-import.js 1`] = `
"import { createLogger } from '@mastra/core/logger';
import { Mastra } from '@mastra/core/mastra';
import { weatherAgent } from '@/agents';
import { serverOptions } from '@/server';
import { telemetryConfig } from '@/telemetry';

const mastra = new Mastra({
  agents: {
    weatherAgent
  },
  logger: createLogger({
    name: "Mastra",
    level: "info"
  }),
  telemetry: telemetryConfig,
  server: serverOptions
});

export { mastra };
"
`;

exports[`Remove deployer > should remove the deployer from ./__fixtures__/basic-with-spread.js 1`] = `
"import { createLogger } from '@mastra/core/logger';
import { Mastra } from '@mastra/core/mastra';

const configLogger = {
  logger: createLogger({
    name: "yo",
    level: "info"
  })
};
const configDeployer = {};
const mastra = new Mastra({
  ...configLogger,
  bundler: {
    externals: ["sharp"]
  },
  ...configDeployer
});

export { mastra };
"
`;
